[fix] nowrap all the buttons for webkit

--- a/assets/base/buttons.styl
+++ b/assets/base/buttons.styl
@@ -32,6 +32,7 @@
   text-decoration: none
   text-shadow: 0 1px 0 #FFF
   text-transform: uppercase
+  white-space: nowrap
 
   &:hover
     text-decoration: none
